# SideBot

./: .gitignore  .pylintrc  Makefile  conf.yaml.sample  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
SideBot/: __init__.py  __main__.py
SideBot/cogs/: __init__.py  basecog.py  developer.py  tags.py
SideBot/db/: tags.py
SideBot/utils/: __init__.py
modules/: admin.py  developer.py
src/: __init__.py  __main__.py
src/SideBot/: __init__.py  __main__.py
src/SideBot/cogs/: admin.py  basecog.py  developer.py  mod.py  tags.py  utility.py
src/SideBot/db/: __init__.py  tags.py
src/SideBot/utils/: __init__.py
src/modules/: admin.py  developer.py  utils.py
src/modules/utils/: __init__.py
