[project]
name = "SideBot"
version = "0.0.1"
authors = [
    { name="nythepegasus", email="me@nythepegas.us" },
]
description = "SideBot is a multipurpose bot for the SideStore community."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.2",
    "asyncpg>=0.29.0",
    "openai>=1.37.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.1",
    "pylint>=3.1.0",
    "asyncpg-stubs>=0.29.1",
    "mypy>=1.9.0",
    "ruff>=0.3.7",
    "pyannotate>=1.2.0",
]

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.mypy]
disallow_incomplete_defs = true

[tool.pdm]
